--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-svg-radar-chart": "^1.2.0",
+    "react-table": "^7.0.0-rc.16",
     "semantic-ui-react": "^0.88.2",
-    "steamapi": "^2.0.7"
+    "steamapi": "^2.0.7",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
